@@ -4,12 +4,14 @@ $TESTING = false unless defined? $TESTING
 
 class ZenTest
 
-  VERSION = '2.0.0'
+  VERSION = '2.1.0'
 
   if $TESTING then
     attr_reader :missing_methods
     attr_writer :test_klasses
     attr_writer :klasses
+  else
+    def missing_methods; raise "Something is wack"; end
   end
 
   def initialize
@@ -22,7 +24,7 @@ class ZenTest
   end
 
   def load_file(file)
-    puts "# loading #{file}" if $DEBUG
+    puts "# loading #{file} // #{$0}" if $DEBUG
     unless file == $0 then
       begin
 	require "#{file}"
@@ -48,7 +50,7 @@ class ZenTest
 	  klassname = cls.name
 	end
       }
-      puts "# searched and found #{klass.name}" if $DEBUG
+      puts "# searched and found #{klass.name}" if klass and $DEBUG
     end
 
     if klass.nil? and not $TESTING then
@@ -74,15 +76,17 @@ class ZenTest
   def get_inherited_methods_for(klass)
     klass = self.get_class(klass) if klass.kind_of? String
 
-    superklass = klass.superclass
-    the_methods = superklass.instance_methods(true)
-
-    # generally we don't test Object's methods...
-    the_methods -= Object.instance_methods(true)
-
     klassmethods = {}
-    the_methods.each do |meth|
-      klassmethods[meth] = true
+    if (klass.class.method_defined?(:superclass)) then
+      superklass = klass.superclass
+      the_methods = superklass.instance_methods(true)
+      
+      # generally we don't test Object's methods...
+      the_methods -= Object.instance_methods(true)
+      
+      the_methods.each do |meth|
+	klassmethods[meth] = true
+      end
     end
     return klassmethods
   end
@@ -110,13 +114,26 @@ class ZenTest
     puts "# Code Generated by ZenTest v. #{VERSION}"
     puts "# run against: #{files.join(', ')}" if $DEBUG
 
+    assert_count = {}
+    method_count = {}
+    assert_count.default = 0
+    method_count.default = 0
+    klassname = nil
+
     files.each do |file|
       is_loaded = false
       IO.foreach(file) do |line|
-	if line =~ /^\s*class\s+(\S+)/ then
+
+	method_count[klassname] += 1 if klassname and line =~ /^\s*def/
+	assert_count[klassname] += 1 if klassname and line =~ /assert|flunk/
+
+	if line =~ /^\s*(?:class|module)\s+(\S+)/ then
 	  klassname = $1
 
-	  next if line =~ /\#\s*ZenTest SKIP/ 
+	  if line =~ /\#\s*ZenTest SKIP/ then
+	    klassname = nil
+	    next
+	  end
 
 	  unless is_loaded then
 	    self.load_file(file)
@@ -139,6 +156,32 @@ class ZenTest
       end # IO.foreach
     end # files
 
+    result = []
+    method_count.each_key do |classname|
+
+      entry = {}
+
+      next if classname =~ /^Test/
+      testclassname = "Test#{classname}"
+      a_count = assert_count[testclassname]
+      d_count = method_count[classname]
+      ratio = a_count.to_f / d_count.to_f * 100.0
+
+      entry['n'] = classname
+      entry['r'] = ratio
+      entry['a'] = a_count
+      entry['d'] = d_count
+
+      result.push entry
+    end
+
+    sorted_results = result.sort { |a,b| b['r'] <=> a['r'] }
+
+    printf "# %25s: %4s / %4s = %6s%%\n", "classname", "asrt", "meth", "ratio"
+    sorted_results.each do |e|
+      printf "# %25s: %4d / %4d = %6.2f%%\n", e['n'], e['a'], e['d'], e['r']
+    end
+
     if $DEBUG then
       puts "# found classes: #{@klasses.keys.join(', ')}"
       puts "# found test classes: #{@test_klasses.keys.join(', ')}"
@@ -147,7 +190,7 @@ class ZenTest
   end
 
   def add_missing_method(klassname, methodname)
-    @result.push "# ERROR method #{klassname}\##{methodname} does not exist (1)" if $DEBUG
+    @result.push "# ERROR method #{klassname}\##{methodname} does not exist (1)" if $DEBUG and not $TESTING
     @error_count += 1
     @missing_methods[klassname] ||= {}
     @missing_methods[klassname][methodname] = true
@@ -208,7 +251,7 @@ class ZenTest
 	    until methodname == "" or methods[methodname] or @inherited_methods[klassname][methodname] do
 	      # try the name minus an option (ie mut_opt1 -> mut)
 	      if methodname.sub!(/_[^_]+$/, '') then
-		if methods[methodname] or @all_methods[klassname][methodname] then
+		if methods[methodname] or @inherited_methods[klassname][methodname] then
 		  found = true
 		end
 	      else
@@ -243,8 +286,8 @@ class ZenTest
 
     if @missing_methods.size > 0 then
       @result.push ""
-      @result.push "require 'test/unit'"
-      @result.push "require 'test/unit/ui/console/testrunner'"
+      @result.push "require 'test/unit/testcase'"
+      @result.push "require 'zentestrunner'"
       @result.push ""
     end
 
@@ -287,28 +330,32 @@ class ZenTest
       @result.push ""
     end
 
+    if @missing_methods.size > 0 then
+      @result.push 'if __FILE__ == $0 then'
+      @result.push '  run_all_tests_with(ZenTestRunner)'
+      @result.push 'end'
+      @result.push ''
+    end
+
     @result.push "# Number of errors detected: #{@error_count}"
-    @result.push ""
+    @result.push ''
   end
 
   def result
     return @result.join("\n")
   end
+
+  def ZenTest.fix(*files)
+    zentest = ZenTest.new
+    zentest.scan_files(*files)
+    zentest.analyze
+    zentest.generate_code
+    return zentest.result
+  end
+
 end
 
 if __FILE__ == $0 then
-  # this is really frustrating... testrunner has an at_exit handler
-  module Kernel
-    alias :old_at_exit :at_exit
-    def at_exit()
-      # nothing to do...
-    end
-  end
-
   $TESTING = true # for ZenWeb and any other testing infrastructure code
-  zentest = ZenTest.new
-  zentest.scan_files(*ARGV)
-  zentest.analyze
-  zentest.generate_code
-  print zentest.result
+  print ZenTest.fix(*ARGV)
 end
