@@ -1,2 +1,4 @@
-# Code Generated by ZenTest v. 2.0.0
+# Code Generated by ZenTest v. 2.1.0
+#                 classname: asrt / meth =  ratio%
+#                      Blah:    3 /    4 =  75.00%
 # Number of errors detected: 0
