@@ -1,7 +1,9 @@
-# Code Generated by ZenTest v. 2.0.0
+# Code Generated by ZenTest v. 2.1.0
+#                 classname: asrt / meth =  ratio%
+#           Something::Blah:    0 /    3 =   0.00%
 
-require 'test/unit'
-require 'test/unit/ui/console/testrunner'
+require 'test/unit/testcase'
+require 'zentestrunner'
 
 module Something
   class Blah
@@ -17,6 +19,10 @@ module TestSomething
       raise NotImplementedError, 'Need to write test_missingtest'
     end
   end
+end
+
+if __FILE__ == $0 then
+  run_all_tests_with(ZenTestRunner)
 end
 
 # Number of errors detected: 2
