@@ -1,12 +1,17 @@
-# Code Generated by ZenTest v. 2.0.0
+# Code Generated by ZenTest v. 2.1.0
+#                 classname: asrt / meth =  ratio%
 
-require 'test/unit'
-require 'test/unit/ui/console/testrunner'
+require 'test/unit/testcase'
+require 'zentestrunner'
 
 class Blah
   def missingimpl
     raise NotImplementedError, 'Need to write missingimpl'
   end
+end
+
+if __FILE__ == $0 then
+  run_all_tests_with(ZenTestRunner)
 end
 
 # Number of errors detected: 1
