@@ -1,7 +1,9 @@
-# Code Generated by ZenTest v. 2.0.0
+# Code Generated by ZenTest v. 2.1.0
+#                 classname: asrt / meth =  ratio%
+#                      Blah:    0 /    2 =   0.00%
 
-require 'test/unit'
-require 'test/unit/ui/console/testrunner'
+require 'test/unit/testcase'
+require 'zentestrunner'
 
 class TestBlah < Test::Unit::TestCase
   def test_missingtest1
@@ -11,6 +13,10 @@ class TestBlah < Test::Unit::TestCase
   def test_missingtest2
     raise NotImplementedError, 'Need to write test_missingtest2'
   end
+end
+
+if __FILE__ == $0 then
+  run_all_tests_with(ZenTestRunner)
 end
 
 # Number of errors detected: 1
